# CLI.rs

./: .gitignore  Cargo.toml  README.md
data/: Cargo.toml
ext_util/: Cargo.toml
ext_util/src/: serde.rs
tmhi/: Cargo.toml
tmhi/src/: lib.rs  main.rs  nokia.rs  result.rs
tmhi/src/nokia/: auth.rs  radio.rs  request.rs
tmhi/tests/: integration.rs
util/: Cargo.toml
