[package]
name = "tmhi"
version = "0.1.0"
edition = "2021"
description = "T-Mobile Home Internet"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
base64 = "0.*"
sha2 = "0.*"
rand = "0.*"

# cli args parsing
structopt = "0.*"
clap-verbosity-flag = "1.*"

# logging
log = "0.*"

# contextual error
anyhow = "1.*"

# progress bar
indicatif = "0.*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
