[package]
name = "tmhi"
version = "0.0.1"
edition = "2021"
description = "T-Mobile Home Internet"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext_util = { path = "../ext_util" }
base64 = "0.13"
sha2 = "0.10"
rand = "0.8"

# cli args parsing
structopt = "0.3"
clap-verbosity-flag = "1.0"

# logging
log = "0.4"

# contextual error
anyhow = "1.0"

# progress bar
indicatif = "0.16"

# http client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
